# pyPlatformer

./: README.md  character.py  game.py  helpfun.py  main.py  main_client.py  main_server.py  pyproject.toml  requirements.txt
config/: settings.py
pyplatformer/: character.py  game.py  game_client.py  game_server.py  helpfun.py
pyplatformer/config/: const.py  settings.py
